# concurra

./: CMakeLists.txt  README.md
include/: Processor.h  ProcessorClass.h  Pusher.h  PusherClass.h  Runner.h  RunnerClass.h  RunnerSynchronousClass.h  StoppableThread.h  function_traits_helper.h
src/: ProcessorClass.cpp  PusherClass.cpp  RunnerClass.cpp  RunnerSynchronousClass.cpp  StoppableThread.cpp  function_traits_helper.cpp
test/: test_class_variant.cpp  test_skip.cpp  test_skip_once.cpp  test_stopping.cpp
